Project saga_be {
  database_type: 'MySQL'
  Note: 'Figure 2.1 - Database schema: Account and identity'
}

Table user_account {
  id char(36) [pk, not null]
  email varchar(255) [not null, unique]
  username varchar(64) [unique]
  google_subject varchar(255) [unique]
  full_name varchar(255)
  avatar_url varchar(500)
  password_hash varchar(255)
  account_role varchar(32) [not null]
  account_status varchar(32) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table student_profile {
  id char(36) [pk, not null]
  user_account_id char(36) [not null, unique]
  student_code varchar(64) [unique]
  approved_by_user_id char(36)
  approved_at datetime(6)
  version bigint [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table lecturer_profile {
  id char(36) [pk, not null]
  user_account_id char(36) [not null, unique]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table password_reset_token {
  id char(36) [pk, not null]
  user_id char(36) [not null]
  token_hash char(64) [not null, unique]
  expires_at datetime(6) [not null]
  used_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table webauthn_credential {
  id char(36) [pk, not null]
  user_account_id char(36) [not null]
  credential_id varchar(512) [not null, unique]
  public_key_cose text [not null]
  signature_count bigint [not null]
  uv_initialized tinyint(1)
  backup_eligible tinyint(1)
  backup_state tinyint(1)
  transports varchar(255)
  label varchar(255)
  last_used_at datetime(6)
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Table identity_map {
  id char(36) [pk, not null]
  user_account_id char(36) [not null]
  provider varchar(32) [not null]
  external_account_id varchar(255)
  external_username varchar(255)
  provider_display_name varchar(255)
  provider_avatar_url varchar(500)
  provider_instance_id varchar(255)
  external_email varchar(255)
  mapping_status varchar(32) [not null]
  is_primary tinyint(1) [not null]
  verified_at datetime(6)
  linked_at datetime(6)
  last_verified_at datetime(6)
  disconnected_at datetime(6)
  revoked_at datetime(6)
  reviewed_by_user_id char(36)
  reviewed_at datetime(6)
  version bigint [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
  active_provider_subject varchar(255) [note: 'generated']
}

Table identity_mapping_history {
  id char(36) [pk, not null]
  identity_map_id char(36) [not null]
  user_account_id char(36) [not null]
  provider varchar(32) [not null]
  external_account_id varchar(255) [not null]
  action varchar(32) [not null]
  previous_status varchar(32)
  new_status varchar(32)
  reason varchar(255)
  source varchar(32)
  is_primary_snapshot tinyint(1)
  previous_state_json json
  new_state_json json
  actor_user_id char(36)
  occurred_at datetime(6) [not null]
  created_at datetime(6) [not null]
  updated_at datetime(6) [not null]
}

Ref: student_profile.user_account_id - user_account.id
Ref: student_profile.approved_by_user_id > user_account.id
Ref: lecturer_profile.user_account_id - user_account.id
Ref: password_reset_token.user_id > user_account.id
Ref: webauthn_credential.user_account_id > user_account.id
Ref: identity_map.user_account_id > user_account.id
Ref: identity_map.reviewed_by_user_id > user_account.id
Ref: identity_mapping_history.identity_map_id > identity_map.id
Ref: identity_mapping_history.user_account_id > user_account.id
Ref: identity_mapping_history.actor_user_id > user_account.id
